--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,4 +2,8 @@
 @import "font-awesome";
 @import "config/colors";
 @import "config/font-size";
+@import "modules/flash";
+@import "modules/group";
+@import "modules/user";
+@import "modules/side_bar";
 @import "index";
