--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,88 +1,92 @@
-.bar {
-  height: 100vh;
-  width: 300px;
-  float: left;
+// .bar {
+//   height: 100vh;
+//   width: 300px;
+//   float: left;
+//   box-sizing: border-box;
+//   position: fixed;
+//   &__group {
+//     height: 100px;
+//     padding: 0 20px;
+//     background-color: $side_blue_dark;
+//     position: relative;
+//   }
+//   &__group__box {
+//     height: 24px;
+//     width: 260px;
+//     background-color:side_blue_dark;
+//     display: flex;
+//     justify-content: space-between;
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     right: 0;
+//     bottom: 0;
+//     margin: auto;
+//   }
+//   &__group__box__user{
+//     height: 24px;
+//     text-align: center;
+//     font-size: $side_header_font;
+//     font-weight: bold;
+//     line-height: 24px;
+//     color:$white;
+//   }
+//   &__group__box__menu{
+//     height: 24px;
+//     text-align: center;
+//     font-size: 10px;
+//     font-weight: bold;
+//     line-height: 24px;
+//     color: $white;
+//     display: flex;
+//   }
+//     &__group__box__menu-new{
+//     height: 24px;
+//     margin-left: 0.3rem;
+//   }
+//   .bar__group__box__menu-new-botton{
+//     color:white;
+//     margin-left: 0.3px;
+//     font-size:16px;
+//   }
+//   &__group__box__menu-edit{
+//     height: 24px;
+//     margin-left: 0.3rem;
+//   }
+//   .bar__group__box__menu-edit-botton{
+//     color:white;
+//     font-size:16PX;
+//     margin-left:0.3px;
+//   }
+//   &__creat {
+//     height: calc(100vh - 100px);
+//     padding: 20px 20px 0;
+//     background-color: $side_blue_light;
+//     overflow: scroll;
+//     box-sizing: border-box;
+//   }
+//   &__creat__box{
+//     height: 31px;
+//     width: 260px;
+//     margin-bottom:40px;
+//   }
+//   &__creat__box__name{
+//     font-size: $side_group_name;
+//     font-weight: bold;
+//     line-height: 15px;
+//     color: $white;
+//     margin-bottom:5px;
+//   }
+//   &__creat__box__message{
+//     font-size: $side_group_message;
+//     font-weight: bold;
+//     line-height: 11px;
+//     color: $white;
+//   }
+// }
+
+*{
   box-sizing: border-box;
-  position: fixed;
-  &__group {
-    height: 100px;
-    padding: 0 20px;
-    background-color: $side_blue_dark;
-    position: relative;
-  }
-  &__group__box {
-    height: 24px;
-    width: 260px;
-    background-color:side_blue_dark;
-    display: flex;
-    justify-content: space-between;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-  }
-  &__group__box__user{
-    height: 24px;
-    text-align: center;
-    font-size: $side_header_font;
-    font-weight: bold;
-    line-height: 24px;
-    color:$white;
-  }
-  &__group__box__menu{
-    height: 24px;
-    text-align: center;
-    font-size: 10px;
-    font-weight: bold;
-    line-height: 24px;
-    color: $white;
-    display: flex;
-  }
-    &__group__box__menu-new{
-    height: 24px;
-    margin-left: 0.3rem;
-  }
-  .bar__group__box__menu-new-botton{
-    color:white;
-    margin-left: 0.3px;
-    font-size:16px;
-  }
-  &__group__box__menu-edit{
-    height: 24px;
-    margin-left: 0.3rem;
-  }
-  .bar__group__box__menu-edit-botton{
-    color:white;
-    font-size:16PX;
-    margin-left:0.3px;
-  }
-  &__creat {
-    height: calc(100vh - 100px);
-    padding: 20px 20px 0;
-    background-color: $side_blue_light;
-    overflow: scroll;
-    box-sizing: border-box;
-  }
-  &__creat__box{
-    height: 31px;
-    width: 260px;
-    margin-bottom:40px;
-  }
-  &__creat__box__name{
-    font-size: $side_group_name;
-    font-weight: bold;
-    line-height: 15px;
-    color: $white;
-    margin-bottom:5px;
-  }
-  &__creat__box__message{
-    font-size: $side_group_message;
-    font-weight: bold;
-    line-height: 11px;
-    color: $white;
-  }
 }
 
 .contents{
@@ -167,58 +171,124 @@
     margin-bottom:40px;
   }
 
+  // &__footer {
+  //   height: 90px;
+  //   padding:20px 40px;
+  //   background-color:#ddd;
+  //   box-sizing: border-box;
+  //   position: relative;
+  // }
+  // &__footer__box {
+  //   height: 50px;
+  //   background-color:white;
+  // }
+  // &__footer__box-sent-message {
+  //   font-size: $side_header_font;
+  //   line-height: 50px;
+  //   padding:0 10px;
+  //   color: #434A54;  
+  //   // float:left;  
+  //   width: 100%;
+  // }
+  // &__footer__box-sent-message-sent{
+  //   height:30px;
+  //   width:100%;
+  //   border: none;
+  //   display: inline-block;
+  // }
+  
+  // &__footer__box-sent-cennter {
+  //   height: 50px;
+  //   width: 25px;
+  //   background-color: #ddd;
+  //   float:right;
+  // }
+  // &__footer__box-sent-botton{
+  //   font-size: 16px;
+  //   line-height: 50px;
+  //   padding: 0 20px;
+  //   color: white;
+  //   background-color: #38aef0;
+  //   border: solid 1px #38aef0;
+  //   float:right;
+  //   text-decoration:none;
+  // }
+  // &__footer__box-sent-botton-function{
+  //   text-decoration:none;
+  //   color: $white;
+  //   display: inline-block
+  // }
+  // &__footer__image{
+  //   font-size:26px;
+  //   position: absolute;
+  //   right: 158px;
+  //   bottom: 26px;
+  //   display: inline-block
+  // }
+
+  // &__footer__image__sent{
+  //   display: none;
+  // }
+  // .hidden{
+  //   display: none;
+  // } 
+
   &__footer {
     height: 90px;
     padding:20px 40px;
     background-color:#ddd;
     box-sizing: border-box;
-    position: relative;
+    
   }
   &__footer__box {
     height: 50px;
     background-color:white;
+    padding:0 0 0 10px;
+    width: 100%;
+    position: relative;
+    display: inline-block;
   }
-  &__footer__box-sent-message {
-    font-size: $side_header_font;
-    line-height: 50px;
-    padding:0 10px;
-    color: #434A54;  
-    float:left;  
-  }
+  // &__footer__box-sent-message {
+  //   line-height: 50px;
+  //   color: #434A54;    
+  //   // width: 100%;
+  // }
   &__footer__box-sent-message-sent{
-    height:30px;
-    width:300px;
+    height:50px;
+    width:70%;
     border: none;
-  }
-  
-  &__footer__box-sent-cennter {
+    vertical-align: middle;
+    float:left;
+  }  
+  // &__footer__box-sent-cennter {
+  //   height: 50px;
+  //   width: 25px;
+  //   background-color: #ddd;
+  //   float:right;    
+  // }
+  &__footer__box-sent-botton-function{
+    color: $white;
     height: 50px;
-    width: 25px;
-    background-color: #ddd;
-    float:right;
-  }
-  &__footer__box-sent-botton{
-    font-size: 16px;
-    line-height: 50px;
     padding: 0 20px;
     color: white;
     background-color: #38aef0;
-    border: solid 1px #38aef0;
-    float:right;
     text-decoration:none;
-  }
-  &__footer__box-sent-botton-function{
-    text-decoration:none;
-    color: $white;
+    display: inline-block;
+    float: right;
+    vertical-align: middle;
   }
   &__footer__image{
     font-size:26px;
     position: absolute;
-    right: 158px;
-    bottom: 26px;
+    right: 110px;
+    bottom: 6px;
   }
 
   &__footer__image__sent{
     display: none;
   }
+  .hidden{
+    display: none;
+  } 
 }
+
